# apollo-hr-agent-rs

./: .gitignore  Cargo.toml  README.md
src/: apollo.rs  main.rs
src/apollo/: agent.rs  utils.rs  workday_schedule.rs
