[package]
name = "apollo-hr-agent-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["derive"] }
rand = "0.8.5"
reqwest ={version="0.11.20", features=["blocking", "cookies", "json", "gzip"]}
serde = {version="1.0.188", features=["derive"]}
serde_json = "1.0.107"
visdom = "1.0.0"
